增加注释，可以自定义缓冲区数目

--- a/config/shmConfig.json
+++ b/config/shmConfig.json
@@ -2,6 +2,7 @@
   "shared_memory": {
     "name": "yuyv_shm",
     "total_size_mb": 32,
-    "buffer_size_mb": 10
+    "buffer_size_mb": 10,
+    "buffer_count": 3
   }
 }
