增加注释，修复共享内存部分的实现

--- a/config/shmConfig.json
+++ b/config/shmConfig.json
@@ -1,6 +1,6 @@
 {
   "shared_memory": {
-    "name": "yuyv_shm",
+    "name": "mjpg_shm",
     "total_size_mb": 32,
     "buffer_size_mb": 10,
     "buffer_count": 3
